--- a/01_Familiarization.Rmd
+++ b/01_Familiarization.Rmd
@@ -15,7 +15,7 @@ if( length(pkgs > 0)){
 knitr::opts_chunk$set(cache=FALSE)
 ```
 
-Throughout this textbook, we will include links to a variety of video lectuers developed by the original author Dr. Derek Sonderegger. The video lectures add useful additional details to the content of this textbook. At this time, the video lectures have not been updated but may be changed in future updates.
+Throughout this textbook, we will include links to a variety of video lectures developed by the original author Dr. Derek Sonderegger. The video lectures add useful additional details to the content of this textbook. At this time, the video lectures have not been updated but may be changed in future updates.
 
 The video lecture for this chapter can be found here: [Video Lecture](https://youtu.be/7_kK4QdoA4k) 
 
@@ -27,29 +27,18 @@ R is a script based language, and there isn't a point-and-click interface for da
 
 ## A Basic Script
 
-The simplest form for developing and executing code is a script file. A script file can be loaded within R studio by selecting `File -> New File -> R Script`. It is encouraged to develop and run code within a script file first, beforing placing code into an RMD file.  A script file only executes R code, such as that of an R-chunk discussed below. However, the script file does not compile any of the other items an Rmarkdown file will use, and thus is a safe and easy way to check if your statistical code is working. If you are getting errors when compiling an Rmarkdown file, ensure that all of your statistical code is properly working first by executing within a basic script file. This can help you decide if the error is coming from RMD (latex, etc...) or if you have a flaw in your solution.
+The simplest form for developing and executing code is a script file. A script file can be loaded within R studio by selecting `File -> New File -> R Script`. It is encouraged to develop and run code within a script file first, before placing code into an RMD file.  A script file only executes R code, such as that of an R-chunk discussed below. However, the script file does not compile any of the other items an Rmarkdown file will use, and thus is a safe and easy way to check if your statistical code is working. If you are getting errors when compiling an Rmarkdown file, ensure that all of your statistical code is properly working first by executing within a basic script file. This can help you decide if the error is coming from Markdown (latex, etc...) or if you have a flaw in your solution.
 
 ## Working within an Rmarkdown File
 
-The first step in any new analysis or project is to create a new Rmarkdown file. 
-This can be done by selecting the `File -> New File -> R Markdown...` dropdown 
-option and a menu will appear asking you for the document title, author, and 
-preferred output type. In order to create a PDF, you'll need to have LaTeX 
-installed, but the HTML output nearly always works and I've had good luck with 
-the MS Word output as well.
+The first step in any new analysis or project is to create a new Rmarkdown file. This can be done by selecting the `File -> New File -> R Markdown...` drop down option and a menu will appear asking you for the document title, author, and preferred output type. In order to create a PDF, you'll need to have LaTeX installed, but the HTML output nearly always works and I've had good luck with the MS Word output as well. All university computers have software prepared for compiling latex documentation. A section has been added to the end of this textbook to help setup personal computers with a lightweight package known as `tinytex` for compiling PDF documents.
 
-The R Markdown is an implementation of the Markdown syntax that makes it extremely 
-easy to write documents and give instructions for how to do typesetting sorts of 
-things. This syntax was extended to allow use to embed R commands directly into 
-the document. 
-Perhaps the easiest way to understand the syntax is to look at the 
-[RMarkdown website](http://rmarkdown.rstudio.com).
+R-Markdown (RMD) is an implementation of the Markdown syntax that makes it extremely easy to write documents and give instructions for how to do typesetting, introduce graphics, display code, and write mathematical expressions. The syntax available to embed R commands directly into the document always for transparent and easy to follow statistical programming. Perhaps the easiest way to understand the syntax is to look at the [RMarkdown website](http://rmarkdown.rstudio.com) or the `Help -> Rmarkdown Quick Reference` drop down link in RStudio.
 
 
 ![](images/RStudio_NewRmarkdown_File.gif)
 
-Once you've created a new Rmarkdown file, you'll be presented with four different 
-panes that you can interact with. 
+Once you've created a new Rmarkdown file, you'll be presented with four different panes that you can interact with. 
 
 |  Pane          | Location   | Description                 |
 |:-----|:----|------------------------------|
@@ -61,64 +50,29 @@ panes that you can interact with.
 
 ![](images/RStudio_Pane_Descriptions.gif)
 
-
-The R Markdown document format is an implementation of the Markdown syntax. 
-It is reasonable to think of a Markdown document as just a text file with some 
-basic structure specifying the typesetting information so that it can easily be 
-converted into either a webpage, pdf, or MS Word document. 
-This syntax was extended to allow us to embed R commands directly into the document. 
-Perhaps the easiest way to understand the syntax is to look at the 
-[RMarkdown website](http://rmarkdown.rstudio.com) or the 
-`Help -> Rmarkdown Quick Reference` dropdown link in RStudio.
-
-Whenever you create a new Rmarkdown document, it is populated with code and comments 
-that attempts to teach new users how to work with Rmarkdown. Critically there are 
-two types of regions:
+Whenever you create a new Rmarkdown document, it is populated with code and comments that attempts to teach new users how to work with Rmarkdown. Critically there are two types of regions:
 
 | Region Type |  Description      |
 |:-----------:|:--------------------------------|
 | Commentary  | These are the areas with a white background. You can write nearly anything here and in your final document it will be copied over. I typically use these spaces to write commentary and interpretation of my data analysis project.  |
 | Code Chunk  |  These are the grey areas. This is where your R code will go. When knitting the document, each code chunk will be run sequentially and the code in each chunk must run. |
 
+The R code in an RMD document is nicely separated from regular text using three back ticks and an instruction that it is R code that needs to be evaluated. A new R chunk can also be quickly inserted into an RMD document using the hotkey `Ctrl+Alt+I` on windows, and a green insert function is located at the top of the RMD document, or you can always manually type them in as well. The output of this document looks good as a HTML, PDF, or MS Word document. This entire book is created using RMarkdown. To see what the the RMD file looks like for any chapter, just click on the pencil icon at the top of the online notes. This is a great way to view the source code for anything programmed in this book, and is highly recommended for copy/pasting information from the book into your own work, such as the exercises at the end of each chapter.
 
-The R code in my document is nicely separated from my regular text using the three 
-backticks and an instruction that it is R code that needs to be evaluated. The 
-output of this document looks good as a HTML, PDF, or MS Word document. I have 
-actually created this entire book using RMarkdown. To see what the the Rmarkdown 
-file looks like for any chapter, just click on the pencil icon at the top of the 
-online notes.
-
-While writing an Rmarkdown file, each of the code chunks can be executed in a 
-couple of different ways. 
+While writing an RMD file, each of the code chunks can be executed in a couple of different ways. 
 
 1. Press the green arrow at the top of the code chunk to run the entire chunk.
-2. The run button has several options has several options.
-3. There are keyboard shortcuts, on the Mac it is Cmd-Return.
+2. The run button has several options for running different amounts of code.
+3. There are keyboard shortcuts, on Windows use Ctrl+Enter, on Mac use Cmd+Return.
 
-To insert a new code chunk, a user can type it in directly, use the green Insert 
-button, or the keyboard shortcut.
+Finally, we want to produce a nice output document that combines the code, output, and commentary. To do this, you'll "knit" the document which causes all of the R code to be run in a new R session, and then weave together the output into your document. This can be done using the knit button at the top of the Editor Window. Be mindful that the RMD file is a stand-alone document that must have all components necessary for the file to run. Anything that was loaded into local memory will not be seen when compiling the RMD file. For instance, if you need a particular data set available for the code to run, this must be coded into the RMD file, and not just loaded into local memory. These types of issues will become more familiar as you work through the examples and exercises available in this textbook.
 
-Finally, we want to produce a nice output document that combines the code, output, 
-and commentary. To do this, you'll "knit" the document which causes all of the R 
-code to be run in a new R session, and then weave together the output into your 
-document. This can be done using the knit button at the top of the Editor Window.
-
-When I was a graduate student, I had to tediously copy and paste tables of output 
-from the R console and figures I had made into my Microsoft Word document. Far too 
-often I would realize I had made a small mistake in part (b) of a problem and would 
-have to go back, correct my mistake, and then redo all the laborious copying. I 
-often wished that I could write both the code for my statistical analysis and the 
-long discussion about the interpretation all in the same document so that I could 
-just re-run the analysis with a click of a button and all the tables and figures 
-would be updated by magic. That is what Rmarkdown does.
-
-
+When I was a graduate student, I had to tediously copy and paste tables of output from the R console and figures I had made into my Microsoft Word document. Far too often I would realize I had made a small mistake in part (b) of a problem and would have to go back, correct my mistake, and then redo all the laborious copying. I often wished that I could write both the code for my statistical analysis and the long discussion about the interpretation all in the same document so that I could just re-run the analysis with a click of a button and all the tables and figures would be updated by magic. That is what RMD does.
 
 ## R as a simple calculator
 
-Assuming that you have started R on whatever platform you like, you can use R as a 
-simple calculator. In either your Rmarkdown file code chunk (or just run this in 
-the console), run the following
+Assuming that you have started R on whatever platform you like, you can use R as a simple calculator. In either your Rmarkdown file code chunk, an R script, or by running it within the console. Try running the following simple calculation in all three of the methods mentioned above:
+
 ```{r}
 # Some simple addition
 2+3
@@ -132,11 +86,7 @@ In this fashion you can use R as a very capable calculator.
 exp(1)   # exp() is the exponential function
 ```
 
-R has most constants and common mathematical functions you could ever want. Functions 
-such as `sin()`, `cos()`, are available, as are the exponential and log 
-functions `exp()`, `log()`. The absolute value is given by `abs()`, and `round()` 
-will round a value to the nearest integer while `floor()` and `ceiling()` will 
-always round down or up as desired.
+R has most constants and common mathematical functions you could ever want. Functions such as `sin()`, `cos()`, are available, as are the exponential and log functions `exp()`, `log()`. The absolute value is given by `abs()`, and `round()` will round a value to the nearest integer while `floor()` and `ceiling()` will always round down or up as desired.
 
 ```{r}
 pi     # the constant 3.14159265...
@@ -145,18 +95,9 @@ log(5) # unless you specify the base, R will assume base e
 log(5, base=10)  # base 10
 ```
 
-Whenever I call a function, there will be some arguments that are mandatory, and 
-some that are optional and the arguments are separated by a comma. In the above 
-statements the function `log()` requires at least one argument, and that is the 
-number(s) to take the log of. However, the base argument is optional. If you do 
-not specify what base to use, R will use a default value. You can see that R will 
-default to using base $e$ by looking at the help page (by typing `help(log)` or 
-`?log` at the command prompt).
+Whenever I call a function, there will be some arguments that are mandatory, and some that are optional and the arguments are separated by a comma. In the above statements the function `log()` requires at least one argument, the number in which you want to log. However, the base argument is optional. If you do not specify what base to use, R will use a default value. You can see that R will default to using base $e$ by looking at the help page by typing `help(log)` or `?log` at the command prompt.
 
-Arguments can be specified via the order in which they are passed or by naming 
-the arguments. So for the `log()` function which has arguments `log(x, base=exp(1))`. 
-If I specify which arguments are which using the named values, then order doesn't 
-matter.
+Arguments can be specified via the order in which they are passed or by naming the arguments. So for the `log()` function which has arguments `log(x, base=exp(1))`. If I specify which arguments are which using the named values, then order doesn't matter. 
 
 ```{r}
 # Demonstrating order does not matter if you specify
@@ -165,8 +106,7 @@ log(x=5, base=10)
 log(base=10, x=5)
 ```
 
-But if we don't specify which argument is which, R will decide that `x` is the 
-first argument, and `base` is the second.
+But if we don't specify which argument is which, R will decide that `x` is the first argument, and `base` is the second. It is suggested to use the order of options as presented in the help files. This will improve efficiency as you become more complex with your statistical programming. Notice when you use these shortcuts though, you will get different answers based on the order you enter values with provided specific option names!
 
 ```{r}
 # If not specified, R will assume the second value is the base...
@@ -174,17 +114,11 @@ log(5, 10)
 log(10, 5)
 ```
 
-When I specify the arguments, I have been using the `name=value` notation and a 
-student might be tempted to use the `<-` notation here. Don't do that as the 
-`name=value` notation is making an association mapping and not a permanent assignment.
+When arguments are specified, notice the use of syntax such as `name=value` notation and a student might be tempted to use the `<-` notation here. Don't do that as the `name=value` notation is making an association mapping and not a permanent assignment. Assignment of objects is one of the core ideas of using R, and is discussed more in the section below.
 
 ### Assignment
 
-We need to be able to assign a value to a variable to be able to use it later. R
-does this by using an arrow `<-` or an equal sign `=`. While R supports either, 
-for readability, I suggest people pick one assignment operator and stick with it. 
-I personally prefer to use the arrow. Variable names cannot start with a number, 
-may not include spaces, and are case sensitive.
+We need to be able to assign a value to a variable to be able to use it later. R does this by using an arrow `<-` or an equal sign `=`. While R supports either, for readability, I suggest people pick one assignment operator and stick with it. I personally prefer to use the arrow and this is the most basic assignment possible. There are different levels of assignment available in R, so stick to the `<-` arrow as you get started. When assigning a new object, be mindful that variable names cannot start with a number, may not include spaces, and are case sensitive. Let's practice by assigning the variable `tau` and `my.test.var` below, and using them in further computations.
 
 ```{r}
 tau <- 2*pi       # create two variables
@@ -194,23 +128,13 @@ my.test.var
 tau * my.test.var
 ```
 
-As your analysis gets more complicated, you'll want to save the results to a 
-variable so that you can access the results later. *If you don't assign the result* 
-*to a variable, you have no way of accessing the result.* 
+As your analysis gets more complicated, you'll want to assign the results to a variable so that you can access the results later. *If you don't assign the result to a variable, you have no way of accessing the result.* Using object-oriented programming within R will have tremendous consequences when developing more complex code.
 
-When a variable has been assigned, you will see it in the environment tab in the
-environment pane. This area is extremely convenient to remind ourselves how we
-spelled a variable name and capitalization. R is case sensitive so `X` and `x` are
-two different variable names, so being consistent in your capitalization scheme
-is quite helpful.
+When a variable has been assigned, you will see it in the environment tab in the environment pane. This area is extremely convenient to remind ourselves how we spelled a variable name and capitalization. R is case sensitive so `X` and `x` are two different variable names, so being consistent in your capitalization scheme is quite helpful. The complexity of assignment names in R is also very useful, so that you can write out complex names for easy to recall functionality. A common theme is known as camel casing, where you write a longer name with each separate word capitalized, such as `MyFirstFunction`.
 
 ### Vectors
 
-While single values are useful, it is very important that we are able to make 
-groups of values. The most fundamental aggregation of values is called a *vector*. 
-In R, we will require vectors to always be of the same type (e.g. all integers or 
-all character strings). To create a vector, we just need to use the *collection* 
-function `c()`.
+While single values are useful, it is very important that we are able to make groups of values. The most fundamental aggregation of values is called a *vector*. In R, we will require vectors to always be of the same type (e.g. all integers or all character strings). To create a vector, we just need to use the *concatenation* function `c()`. This is a very common theme in R, so get used to using concatenation early! Below we create two vectors through concatenation, the first a vector of strings, the second a vector of constants.
 
 ```{r}
 x <- c('A','A','B','C')
@@ -219,123 +143,74 @@ y <- c( 4, 3, 8, 10 )
 y
 ```
 
-It is very common to have to make sequences of integers, and R has a shortcut to 
-do this. The notation `A:B` will produce a vector starting with A and incrementing 
-by one until we get to B.
+It is very common to have to make sequences of integers, and R has a shortcut to do this. The notation `A:B` will produce a vector of constants starting with the value A and incrementally increasing by one until the value B. Here we quickly produce a vector of constants from 2 to 6.
 
 ```{r}
 2:6
 ```
 
-Nearly every function in R behaves correctly when being given a vector of values.
+Nearly every function in R behaves correctly when being given a vector of values. This is called vectorization and can make computations within R very fast if properly used. Vectorization is much faster than writing for-loops (learned in later chapters), so practice with vectors is very important. Notice we can feed a vector of constants to the log function, and it will calculate the log of each element of the vector.
 
 ```{r}
 x <- c(4,7,5,2)   # Make a vector with four values
 log(x)            # calculate the log of each value.
 ```
 
-
-
 ## Packages
-One of the greatest strengths about R is that so many people have devloped add-on 
-packages to do some additional function. For example, plant community ecologists 
-have a large number of multivariate methods that are useful but were not part of R.  
-So Jari Oksanen got together with some other folks and put together a package of 
-functions that they found useful.  The result is the package `vegan`. 
 
-To download and install the package from the Comprehensive R Archive Network (CRAN), 
-you just need to ask RStudio it to install it via the menu 
-`Tools` -> `Install Packages...`. Once there, you just need to give the name of 
-the package and RStudio will download and install the package on your computer. 
+One of the greatest strengths about R is that so many people have developed add-on packages with additional functionality. For example, plant community ecologists have a large number of multivariate methods that are useful but were not part of R. So Jari Oksanen got together with some other folks and put together a package of functions that they found useful.  The result is the package `vegan`.
 
-Many major analysis types are available via downloaded packages as well as problem 
-sets from various books (e.g. `Sleuth3` or `faraway`) and can be easily downloaded 
-and installed from CRAN via the menu.
+To download and install the package from the Comprehensive R Archive Network (CRAN), you just need to ask RStudio it to install it. This can be done via the menu `Tools` -> `Install Packages...`. You can also use a console or script and the R function `install.packages()`. With either method, you just need to provide the name of the package and RStudio will download and install the package on your computer.
 
-Once a package is downloaded and installed on your computer, it is available, but 
-it is not loaded into your current R session by default. The reason it isn't loaded 
-is that there are thousands of packages, some of which are quite large and only 
-used occasionally. So to improve overall performance only a few packages are loaded 
-by default and the you must explicitly load packages whenever you want to use them. 
-You only need to load them once per session/script.
+Many major analysis types are available via downloaded packages as well as problem sets from various books (e.g. `Sleuth3` or `faraway`) and can be easily downloaded and installed from CRAN.
+
+Once a package is downloaded and installed on your computer, it is available and does not need to be installed again. However, it is not loaded into your current R session by default. The reason it isn't loaded is that there are thousands of packages, some of which are quite large and only used occasionally. So to improve overall performance only a few packages are loaded by default. When you want to use a specific package you must explicitly load them. You only need to load them once per session/script. After installing the `vegan` package, we can load the package into our environment using the `library()` function.
 
 ```{r, warning=FALSE, message=FALSE}
 library(vegan)   # load the vegan library
 ```
 
-For a similar performance reason, many packages do not automatically load their 
-datasets unless explicitly asked. Therefore when loading datasets from a package, 
-you might need to do a *two-step* process of loading the package and then loading 
-the dataset.
+For a similar performance reason, many packages do not automatically load their data sets unless explicitly asked. Therefore when loading data sets from a package, you might need to do a *two-step* process of loading the package and then loading the data set.
 
 ```{r}
 library(faraway)       # load the package into memory
-data("butterfat")      # load the dataset into memory
+data("butterfat")      # load the data set into memory
 ```
 
-If you don't need to load any functions from a package and you just want the 
-datasets, you can do it in one step.
+If you don't need to load any functions from a package and you just want the data, you can do it in one step.
 
 ```{r}
-data('butterfat', package='faraway')   # just load the dataset, not anything else
+data('butterfat', package='faraway')   # just load the data set, not anything else
 head(butterfat)                        # print out the first 6 rows of the data
 ```
 
-Similarly, if I am not using many functions from a package, I might choose call 
-the functions using the notation `package::function()`. This is particularly 
-important when two packages both have functions with the same name and it gets 
-confusing which function you want to use. For example the packages `mosaic` and 
-`dplyr` both have a function `tally`. So if I've already loaded the `dplyr` 
-package but want to use the `mosaic::tally()` function I would use the following:
+Similarly, if I am not using many functions from a package, I might choose call the functions using the notation `package::function()`. This is particularly important when two packages both have functions with the same name and it gets confusing which function you want to use. For example the packages `mosaic` and `dplyr` both have a function `tally`. When such a conflict occurs, you may notice R provides a warning that certain functions have been *masked*. This is a not an error, instead a message informing you that more than one function of the same name is present. These messages were purposefully left in the sections above so you can observe their behavior. For example, if the `dplyr` package is loaded but you want to use the `mosaic::tally()` function, you can introduce the following syntax so that R knows which version of `tally()` you want to execute.
+
 ```{r}
 mosaic::tally( c(0,0,0,1,1,1,1,2) )
 ```
 
-Finally, many researchers and programmers host their packages on GitHub 
-(or equivalent site) and those packages can easily downloaded using tools from 
-the `devtools` package, which can be downloaded from CRAN.
+Finally, many researchers and programmers host their packages on GitHub (or equivalent site) and those packages can easily downloaded using tools from the `devtools` package, which can be downloaded from CRAN. In later chapters of the STA 445 section, we will learn to host our own R packages through GitHub. These can then be installed directly from a github repository using the `install_github()` function. Below installs a demo package we will build in later Chapters. Remember, if you want to execute the code below, you'll likely need to install the `devtools` package first!
 
 ```{r, eval=FALSE}
-devtools::install_github('dereksonderegger/SiZer')
+devtools::install_github('DrBuscaglia/F23DemoPackage')
 ```
 
 ## Finding Help
 
-There are many complicated details about R and nobody knows everything about how 
-each individual package works. As a result, a robust collection of resources has 
-been developed and you are undoubtedly not the first person to wonder how to do 
-something. 
+There are many complicated details about R and nobody knows everything about how each individual package works. As a result, a robust collection of resources has been developed and you are undoubtedly not the first person to wonder how to do something. 
 
 ### How does this function work?
-If you know the function you need, but just don't know how to use it, the built-in 
-documentation is really quite good. Suppose I am interested in how the `rep` function 
-works. We could access the `rep` help page by searching in the help window or from 
-the console via `help(rep)`. The document that is displayed shows what arguments 
-the function expects and what it will return. At the bottom of the help page is 
-often a set of examples demonstrating different ways to use the function. As you 
-get more proficient in R, these help files become quite handy, but initially they 
-feel quite overwhelming. 
+
+If you know the function you need, but just don't know how to use it, the built-in documentation is really quite good. Suppose I am interested in how the `rep` function works. We could access the `rep` help page by searching in the help window or from the console via `help(rep)`. The document that is displayed shows what arguments the function expects and what it will return. At the bottom of the help page is often a set of examples demonstrating different ways to use the function. As you get more proficient in R, these help files become quite handy, but initially they feel quite overwhelming. 
 
 ### How does this package work?
-If a package author really wants their package to be used by a wide audience, 
-they will provide a "vignette". These are a set of notes that explain enough of 
-how a package works to get a user able to utilize the package effectively. This 
-documentation is targeted towards people the know some R, but deep technical 
-knowledge is not expected. Whenever I encounter a new package that might be applicable 
-to me, the first thing I do is see if it has a vignette, and if so, I start reading 
-it. If a package doesn't have a vignette, I'll google "R package XXXX" and that 
-will lead to documentation on CRAN that gives a list of functions in the package.
+
+If a package author really wants their package to be used by a wide audience, they will provide a "vignette". These are a set of notes that explain enough of how a package works to get a user able to utilize the package effectively. This documentation is targeted towards people the know some R, but deep technical knowledge is not expected. Whenever I encounter a new package that might be applicable to me, the first thing I do is see if it has a vignette, and if so, I start reading it. If a package doesn't have a vignette, I'll Google "R package XXXX" and that will lead to documentation on CRAN that gives a list of functions in the package.
 
 ### How do I do XXX?
-Often I find myself asking how to do something but I don't know the function or 
-package to use. In those cases, I will use the coding question and answer site 
-[stackoverflow](http://stackoverflow.com). This is particularly effective and I 
-encourage students to spend some time to understand the solutions presented instead 
-of just copying working code. By digging into why a particular code chunk works, 
-you'll learn all sorts of neat tricks and you'll find yourself utilizing the site 
-less frequently.
 
-
+Often I find myself asking how to do something but I don't know the function or package to use. In those cases, I will use the coding question and answer site [stackoverflow](http://stackoverflow.com). This is particularly effective and I encourage students to spend some time to understand the solutions presented instead of just copying working code. By digging into why a particular code chunk works, you'll learn all sorts of neat tricks and you'll find yourself utilizing the site less frequently.
 
 ## Exercises {#Exercises_Familiarization}
 
@@ -350,9 +225,9 @@ Create an RMarkdown file that solves the following exercises.
     *Hint: use Google to find the square root function. Perhaps search on the* 
     *keywords  "R square root function".*
 
-3.  This exercise walks you through installing a package with all the datasets used 
+3.  This exercise walks you through installing a package with all the data sets used 
     in the textbook *The Statistical Sleuth*.
     a) Install the package `Sleuth3` on your computer using RStudio. 
     b) Load the package using the `library()` command.
-    c) Print out the dataset `case0101`.
+    c) Print out the data set `case0101`.
 
